changes the modal to float over gallery through css position fixed and z-index.

--- a/src/templates/image-template.module.css
+++ b/src/templates/image-template.module.css
@@ -5,7 +5,10 @@
 
 .Gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); /* see notes below */
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(400px, 1fr)
+  ); /* see notes below */
   grid-gap: 25px;
   justify-items: center;
   transition-duration: 0.6s;
@@ -15,7 +18,6 @@
   width: 100%;
   transition-duration: 0.6s;
 }
-
 
 .Layout_Modal {
   display: flex;
@@ -27,25 +29,15 @@
 
 .Modal {
   display: flex;
-  position: fixed;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  height: 100%;
-  padding-right: 10%;
-  transition-duration: 0.6s;
-  /* background-color: lightpink; */
-}
-
-.Modal {
-  display: flex;
   position: fixed;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
-  padding-right: 10%;
-  transition-duration: 0.6s;
+  background-color: #1f1f1f;
+  z-index: 2;
 }
 
 @media screen and (max-width: 812px) {
@@ -57,11 +49,7 @@
   }
 }
 
-
-
 .main_image {
-  display: grid;
-  width: 100%;
+  width: 80%;
   max-width: 1600px;
-  margin: 5% 2% s20% 0;
 }
